Cleaned up Day 06